assets/stylesheets/subtask_list_accordion.css
#issue_tree > p {
  margin-bottom: 5px;
}

.contextual.accordion_control {
  float: none;
  margin-bottom: 5px;
  padding: 2px 7px 2px 2px;
}

.accordion_control a {
  background-position: 5px 50%;
  background-repeat: no-repeat;
  padding-bottom: 3px;
  padding-left: 20px;
  padding-top: 2px;
}

.accordion_control a.subtask_all_expand {
  background-image: url(../images/arrow_down.png);
}

.accordion_control a.subtask_all_collapse {
  background-image: url(../images/arrow_right.png);
}

tr.issue.idnt td.subject {background: none;}
tr.issue.idnt-1 td.subject {padding-left: 18px;}
tr.issue.idnt-2 td.subject {padding-left: 34px;}
tr.issue.idnt-3 td.subject {padding-left: 50px;}
tr.issue.idnt-4 td.subject {padding-left: 66px;}
tr.issue.idnt-5 td.subject {padding-left: 82px;}
tr.issue.idnt-6 td.subject {padding-left: 98px;}
tr.issue.idnt-7 td.subject {padding-left: 114px;}
tr.issue.idnt-8 td.subject {padding-left: 130px;}
tr.issue.idnt-9 td.subject {padding-left: 146px;}

tr.issue:not(.idnt):not(.haschild) td.subject a {
  margin-left: 16px;
}

tr.issue.idnt:not(.haschild) td.subject a {
  margin-left: 16px;
}

tr.issue.haschild > td.subject > span.treearrow {
  cursor: pointer;
  padding-left: 16px;
}

tr.issue.haschild.collapse > td.subject > span.treearrow {
  background: url(../images/arrow_right.png) no-repeat 2px 50%;
}

tr.issue.haschild.expand > td.subject > span.treearrow {
  background: url(../images/arrow_down.png) no-repeat 2px 50%;
}

/*
 * Redmine 6.x ではアセットパイプラインにより /public/images/ が存在しないため、
 * アイコン画像をプラグイン自身の assets/images/ に同梱している。
 */
.icon-arrow-expanded,
.icon-arrow-collapsed {
  background-position: 5px 50%;
  background-repeat: no-repeat;
  padding-left: 20px;
}

.icon-arrow-expanded {
  background-image: url(../images/arrow_down.png);
}

.icon-arrow-collapsed {
  background-image: url(../images/arrow_right.png);
}

